demo-k8s/collab.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: collab
  namespace: topics
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: collab
    spec:
      containers:
      - name: collab
        image: solsson/topics-collab-writer
        imagePullPolicy: Never # building locally for now
        ports:
        - containerPort: 80
