demo-k8s/backend-rweb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svn
  namespace: topics
spec:
  type: NodePort
  selector:
    app: svn
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rweb
  namespace: topics
spec:
  clusterIP: None
  selector:
    app: svn
  ports:
  - port: 9000
    targetPort: 9000
