demo-k8s/collab-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: collab
  namespace: topics
spec:
  type: NodePort
  selector:
    app: collab
  ports:
  - port: 80
    targetPort: 80
