demo-k8s/solr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: solr
spec:
  type: NodePort
  selector:
    app: solr
  ports:
  - port: 8983
    targetPort: 8983
